Add li element for categories

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Resource List</h1>
     <p>This is a list of articles, tools, how to guides and other related resources</p>
+    <section>
+        <ul>
+            <li>Articles</li>
+            <li>How tos</li>
+            <li>Tools</li>
+            <li>Notes</li>
+        </ul>
+    </section>
 </body>
 </html>
