Add tabs 'Podcast' and 'Websites'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <li>Articles</li>
             <li>How tos</li>
             <li>Tools</li>
-            <li>Notes</li>
+            <li>Podcast</li>
+            <li>Websites</li>
+            <li>Study Notes</li>
         </ul>
     </section>
 </body>
